texlive-bin (2017.20170613.44572-5) UNRELEASED; urgency=medium

  * fix changelog mess-up.

 -- Norbert Preining <preining@debian.org>  Tue, 08 Aug 2017 07:55:10 +0900

texlive-bin (2017.20170613.44572-4) unstable; urgency=medium

  * fix FTBFS with gcc7 (Closes: #870796)
    Thanks Werner Fink for the patch and Hironobu Yamashita for pointing
    me at it.
  * bump standards version, no changes necessary


 -- Norbert Preining <preining@debian.org>  Tue, 08 Aug 2017 07:54:46 +0900

texlive-bin (2017.20170613.44572-3) unstable; urgency=medium

  * fix typo in breaks (Closes: #867675)
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Sun, 09 Jul 2017 22:54:57 +0900

texlive-bin (2017.20170613.44572-2) unstable; urgency=medium

  * upload to unstable

 -- Norbert Preining <preining@debian.org>  Mon, 19 Jun 2017 16:32:49 +0900

texlive-bin (2017.20170613.44572-1) experimental; urgency=medium

  * New upstream version 2017.20170613.44572
    - three fixes for luatex

 -- Norbert Preining <preining@debian.org>  Tue, 13 Jun 2017 09:13:12 +0900

texlive-bin (2017.20170524.44437-1) experimental; urgency=medium

  * make-orig-tar: we are in 2017 now ;-)
  * New upstream version 2017.20170524.44437
  * update patches
  * add fix for expose events from tex-k ml

 -- Norbert Preining <preining@debian.org>  Sat, 27 May 2017 11:01:41 +0900

texlive-bin (2016.20160513.41080.dfsg-2) unstable; urgency=medium

  * cherrypick upstream svn43637 (Closes: #796490)
    When embedding png images with alpha channel, pdftex did embed
    twice as much memory and left the second half uninitialized.
    Thanks to David Fifield for research and fix.

 -- Norbert Preining <preining@debian.org>  Thu, 30 Mar 2017 10:02:29 +0900

texlive-bin (2016.20160513.41080.dfsg-1) unstable; urgency=medium

  * new upstream repackaging:
    - drop SFConv from upstream tarball as it contains non-free files
  * cherrypick several upstream fixes: